tests/toylang/neg/001178_mutation.toylang
program a = { 0 var a : bool; } .
